[package]
name = "sn360-tls-roots"
description = "Load a PEM-encoded CA bundle into a rustls RootCertStore via the maintained rustls-pki-types PemObject API (Tier 1.3 shared extraction; avoids RUSTSEC-2025-0134)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
# rustls 0.23 + rustls-pki-types 1.x match the agent workspaces, so the
# returned `RootCertStore` type unifies when an agent re-exports this
# crate. We deliberately do NOT depend on `rustls-pemfile` (flagged
# unmaintained by RUSTSEC-2025-0134) — PEM parsing goes through the
# supported `rustls_pki_types::pem::PemObject` API instead.
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Happy-path test generates a real self-signed cert rather than
# depending on a checked-in PEM fixture.
rcgen = "0.14"
tempfile = "3"
